Initial commit: JurChecker API with automatic alias expansion
- FastAPI server with /check-candidates endpoint
- AliasExpander class with morphology, transliteration, initials
- 37 passing tests (25 contract + 12 integration)
- Support for 1400+ entities from registry_entities_rows.csv
- Automatic generation of ~65k aliases
- Aho-Corasick automaton with pickle caching

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ uvicorn[standard]==0.30.0
 pandas==2.2.0
 pyahocorasick==2.1.0
 pydantic==2.9.0
+pymorphy3==1.2.0
+petrovich==2.0.1
+transliterate==1.10.2
+pytest==8.0.0
